MDL-47494 ddwtos: NOBUG fixed various problems by making border of dropped drag object invisible
Fixes problem not being able to see whether element has focus and ugly
appearance of double borders when drag element is slightly misplaced. Also
made drop a couple of pixels higher and wider than drag.

--- a/question/type/ddwtos/styles.css
+++ b/question/type/ddwtos/styles.css
@@ -11,6 +11,10 @@
     margin-bottom: 0.5em;
 }
 
+.que.ddwtos .drop.filled {
+    border: 3px dotted #000000;
+}
+
 .que.ddwtos .drop {
     display: inline-block;
     text-align: center;
@@ -19,6 +23,10 @@
 .que.ddwtos .draghome, .que.ddwtos .drag{
     display: inline-block;
     text-align: center;
+    background: transparent;
+    border: 0;
+}
+.que.ddwtos .draghome, .que.ddwtos .drag.unplaced{
     border: 1px solid #000000;
 }
 .que.ddwtos .draghome {
